--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,19 @@
     <string name="app_name">final_project</string>
     <string name="email">Email</string>
     <string name="password">Password</string>
+    <string name="images">Image</string>
+    <string name="next">Next</string>
+    <string name="order_summary">Ringkasan Order</string>
+    <string name="send">Send Order to Another App</string>
+    <string name="quantity">Jumlah</string>
+    <string name="subtotal_price">Subtotal : Rp%s</string>
+    <string name="total_price">Total %s</string>
+    <string name="nama">Nama</string>
+    <string name="alamat">Alamat</string>
+    <string name="No_tlp">No Telepon</string>
+    <string name="btn_submit">Submit</string>
+    <string name="btn_back">Back</string>
+    <string name="back_button">Kembali</string>
+    <string name="confirm">Konfirmasi</string>
+    <string name="cancel">Batal</string>
 </resources>
